--- a/Particles_1.ipynb
+++ b/Particles_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5NXCMvhSm6ir3grxC+q6H",
+      "authorship_tag": "ABX9TyMJEX3Pam0UiUPt8UhB93hz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,37 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# **Statistical Mechanics Lab**"
+      ],
       "metadata": {
-        "id": "BQ0DZ1baZJQw"
+        "id": "fCSaXGkwZVoM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Collection of Particles**\n",
+        "\n",
+        "**Lennard-Jones Potential**: It describes the pairwise interaction between the particles:\n",
+        "\n",
+        "$$V_{LJ} (r) = 4 \\epsilon \\left[ \\left(\\frac{\\sigma}{r}\\right)^{12} - \\left(\\frac{\\sigma}{r}\\right)^6 \\right] $$\n",
+        "\n",
+        "where $r$ is the distance between particles, $\\epsilon$ is the depth of potential well and $\\sigma$ is the finite distance at which inter-particle potential is zero.\n"
+      ],
+      "metadata": {
+        "id": "kkQFS7n-ZkvW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "n2visGDiZsaj"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
