--- a/macrostate_1.ipynb
+++ b/macrostate_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiOMyaGZYNnnzrjdV967Ln",
+      "authorship_tag": "ABX9TyNwQqU23KqspvjNvgyqURg0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
         "id": "zQ0Fley7maC-",
         "outputId": "68d06a60-f8f8-46af-b8d0-6e7c7d41c64d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -99,22 +99,36 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "\n",
         "def uniform(n,m):\n",
         "  return np.random.randint(1,n+1,size=m)\n",
         "\n",
-        "print(uniform(2,10))\n",
+        "#print(uniform(2,10))\n",
         "\n",
-        "toss = 10\n",
+        "set_of_coins = 4\n",
+        "events = 10\n",
         "\n",
         "heads=0\n",
         "tails=0\n",
-        "for i in range(toss):\n",
+        "\n",
+        "for j in range(events):\n",
+        "  for i in range(set_of_coins):\n",
+        "    res=uniform(2,1)\n",
+        "\n",
+        "\n",
+        "\n",
+        "micro_state=[]\n",
+        "for i in range(set_of_coins):\n",
         "  res=uniform(2,1)\n",
         "  if res == 1:\n",
         "    heads +=1\n",
+        "    micro_state.append(\"H\")\n",
         "  else:\n",
         "    tails += 1\n",
-        "print(heads,tails)\n",
+        "    micro_state.append(\"T\")\n",
+        "\n",
+        "print(heads,tails,micro_state)\n",
         "\n"
       ],
       "metadata": {
@@ -122,16 +136,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jQqX39PTtkrO",
-        "outputId": "3fcf7896-40bd-43a1-f47d-68755d863196"
+        "outputId": "8afee09a-8f00-46d0-920a-6404018d4825"
       },
-      "execution_count": 20,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[2 2 2 2 2 2 1 2 1 1]\n",
-            "5 5\n"
+            "2 2 ['H', 'T', 'H', 'T']\n"
           ]
         }
       ]
