--- a/macrostate_1.ipynb
+++ b/macrostate_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwKce9zooyLsQ1wNtSJYpo",
+      "authorship_tag": "ABX9TyMFuu7qvTS9zijmYhDRxzF3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,12 +151,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "outcomes=['H','T']\n",
+        "no_coins=4\n",
+        "\n",
+        "t1=[]\n",
+        "for _ in range(no_coins):\n",
+        "  t1.append(random.choice(outcomes))\n",
+        "\n",
+        "outcome=''.join(t1)\n",
+        "\n",
+        "print(outcome)\n",
+        ""
+      ],
       "metadata": {
-        "id": "vXCY_UeuBB0d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vXCY_UeuBB0d",
+        "outputId": "04117a2f-a18d-4ff3-e10f-6590ef05fa88"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HTTT\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -210,12 +236,12 @@
         "plot_probabilities(probabilities)\n"
       ],
       "metadata": {
-        "id": "GsvCgGA89Cq_",
-        "outputId": "92efa287-d316-48ba-8594-9e8f064d425c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
-        }
+        },
+        "id": "GsvCgGA89Cq_",
+        "outputId": "92efa287-d316-48ba-8594-9e8f064d425c"
       },
       "execution_count": 5,
       "outputs": [
