--- a/partition1.ipynb
+++ b/partition1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5NXCMvhSm6ir3grxC+q6H",
+      "authorship_tag": "ABX9TyPbII+WV2b9SBkcvJpcnSpr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,74 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# **Computation of the partition function Z(b) for the systems with a finite number of single particle levels (e.g., 2 level, 3 level etc.) and finite number of non-interacting particles N under Maxwell-Boltzmann/ Fermi-Dirac/Bose Einstein statistics**\n",
+        "\n",
+        "$$f(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT}\\right) + a } $$\n",
+        "\n",
+        "-  For Maxwell-Boltzman, a = 0\n",
+        "-  For Bose-Einstein, a = -1\n",
+        "-  For Fermi-Dirac, a = +1"
+      ],
       "metadata": {
-        "id": "vQvJFD4rK8A6"
+        "id": "BhWJcN3RLFcr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Maxwell-Boltzman statistics**\n",
+        "\n",
+        "$$f_{MB}(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT} \\right)} $$\n",
+        "\n",
+        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n"
+      ],
+      "metadata": {
+        "id": "XJs62g7-L_rM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rH3zAHtzL_C9"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Bose-Einsteinn statistics**\n",
+        "\n",
+        "$$f_{BE}(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT}\\right) - 1 } $$\n",
+        "\n",
+        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n"
+      ],
+      "metadata": {
+        "id": "oA0SmdzPM7Fc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "HeN3idtGNIpI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Fermi-Dirac statistics**\n",
+        "\n",
+        "$$f_{FD}(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT}\\right) + 1 } $$\n",
+        "\n",
+        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n"
+      ],
+      "metadata": {
+        "id": "lVbZ7tQ8NJOz"
+      }
     }
   ]
 }
