--- a/partition1.ipynb
+++ b/partition1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbII+WV2b9SBkcvJpcnSpr",
+      "authorship_tag": "ABX9TyOlRaz+xXMWplyII5moJzPE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Computation of the partition function Z(b) for the systems with a finite number of single particle levels (e.g., 2 level, 3 level etc.) and finite number of non-interacting particles N under Maxwell-Boltzmann/ Fermi-Dirac/Bose Einstein statistics**\n",
+        "# <u>**Partition Function**</u>\n",
+        "\n",
+        "Partition Function (PF) helps in relating micro-states with macroscopic properties. PF helps us in calculating macroscopic quantities like Entropy, pressure etc.\n",
+        "\n",
+        "\n",
+        "**Computation of the partition function Z(b) for the systems with a finite number of single particle levels (e.g., 2 level, 3 level etc.) and finite number of non-interacting particles N under Maxwell-Boltzmann/ Fermi-Dirac/Bose Einstein statistics**\n",
         "\n",
         "$$f(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT}\\right) + a } $$\n",
         "\n",
@@ -44,7 +49,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Maxwell-Boltzman statistics**\n",
+        "##**Maxwell-Boltzman statistics** (classical statistics/case)\n",
+        "\n",
+        "In this statistics\n",
+        "  - particles are distinguishable\n",
+        "  - Any number of particles can be in one state\n",
         "\n",
         "$$f_{MB}(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT} \\right)} $$\n",
         "\n",
@@ -66,7 +75,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Bose-Einsteinn statistics**\n",
+        "##**Bose-Einstein statistics**\n",
+        "\n",
+        " - Particles are indistinguishable\n",
+        " - Bosons have integer spin (0,1,2, etc.), any number of particles can be in one state\n",
         "\n",
         "$$f_{BE}(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT}\\right) - 1 } $$\n",
         "\n",
@@ -87,6 +99,9 @@
       "cell_type": "markdown",
       "source": [
         "##**Fermi-Dirac statistics**\n",
+        "\n",
+        " - Particles are indistinguishable\n",
+        " - Fermions have half integer (1/2,3/2 etc.) spin. Not more than one particle can be in one state.\n",
         "\n",
         "$$f_{FD}(E) = \\frac{1}{exp\\left( \\frac{E--\\mu}{kT}\\right) + 1 } $$\n",
         "\n",
