--- a/partition1.ipynb
+++ b/partition1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjBWEOVu/LsxNwKlYPJ3Vg",
+      "authorship_tag": "ABX9TyNh96CFKPDaOOA54mELWKSD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,9 +55,18 @@
         "  - particles are distinguishable\n",
         "  - Any number of particles can be in one state\n",
         "\n",
+        "Distribution function:\n",
+        "\n",
         "$$f_{MB}(E) = \\frac{1}{exp\\left( \\frac{E - \\mu}{kT} \\right)} $$\n",
         "\n",
-        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n"
+        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n",
+        "\n",
+        "Parition function:\n",
+        "\n",
+        "$$Z_{MB} = \\sum_{i=1}^N e^{-\\beta (\\epsilon_i - \\mu)}$$\n",
+        "where $\\beta = \\frac{1}{kT}$ and $\\epsilon_i$ is the energy of the $i^{th}$ single-particle level.\n",
+        "\n",
+        "We have summation in partition function because the particles here are distinguishable and independent and hence their probabilities add up."
       ],
       "metadata": {
         "id": "XJs62g7-L_rM"
@@ -73,7 +82,15 @@
         "\n",
         "$$f_{BE}(E) = \\frac{1}{exp\\left( \\frac{E - \\mu}{kT}\\right) - 1 } $$\n",
         "\n",
-        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n"
+        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n",
+        "\n",
+        "\n",
+        "Parition function:\n",
+        "\n",
+        "$$Z_{BE} = \\prod_{i=1}^N \\frac{1}{e^{\\beta (\\epsilon_i - \\mu)} - 1}$$\n",
+        "where $\\beta = \\frac{1}{kT}$ and $\\epsilon_i$ is the energy of the $i^{th}$ single-particle level.\n",
+        "\n",
+        "Here multiple particles can occupy the same state. The joint probability of particles will be a product.\n"
       ],
       "metadata": {
         "id": "oA0SmdzPM7Fc"
@@ -89,7 +106,15 @@
         "\n",
         "$$f_{FD}(E) = \\frac{1}{exp\\left( \\frac{E - \\mu}{kT}\\right) + 1 } $$\n",
         "\n",
-        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n"
+        "where $E$ is the energy, $\\mu$ is the chemical potential and $T$ is the absolute temperature.\n",
+        "\n",
+        "\n",
+        "Parition function:\n",
+        "\n",
+        "$$Z_{FD} = \\prod_{i=1}^N \\frac{1}{e^{\\beta (\\epsilon_i - \\mu)} + 1}$$\n",
+        "where $\\beta = \\frac{1}{kT}$ and $\\epsilon_i$ is the energy of the $i^{th}$ single-particle level.\n",
+        "\n",
+        "The joint probability of particles will be a product as particles are indistinguishable and can be in different states.  "
       ],
       "metadata": {
         "id": "lVbZ7tQ8NJOz"
@@ -156,7 +181,7 @@
         "id": "7vtCyw1k1978",
         "outputId": "9ecbc4f8-e9ba-4d03-af10-d2c3ad8ffbad"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -215,7 +240,7 @@
         },
         "id": "LSqf64k6ifOB"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -274,7 +299,7 @@
         },
         "id": "o9txZIGRmbYL"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -333,7 +358,7 @@
         },
         "id": "aOHV9gumpaW8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -434,7 +459,7 @@
           "height": 703
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,6 +486,29 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**Average Energy**\n",
+        "\n",
+        "The average energy can be calculated from:\n",
+        "\n",
+        "$$ E^{av} = -\\frac{\\partial}{\\partial \\beta} ln (Z) $$\n",
+        "\n",
+        "**Maxwell-Boltzman**\n",
+        "\n",
+        "$$ E^{av}_{MB} = \\sum_{i=1}^N \\epsilon_i\n",
+        "\\frac{e^{-\\beta (\\epsilon_i - \\mu)}}{\\sum_{i=1}^N\n",
+        "e^{-\\beta (\\epsilon_i - \\mu)}}  $$\n",
+        "\n",
+        "\n",
+        "**Bose-Einstein**\n",
+        "$$ E^{av}_{BE} = \\sum_{i=1}^N \\epsilon_i $$\n"
+      ],
+      "metadata": {
+        "id": "53An9d-4sWu6"
+      }
     }
   ]
 }
