--- a/planckslaw1.ipynb
+++ b/planckslaw1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWR4EUMb09TZAOAyhH4Mnm",
+      "authorship_tag": "ABX9TyOdX+QvXn9SOR4yXtI8aRC9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,16 @@
         "$$u(\\nu,T) d\\nu= \\frac{8 \\pi h \\nu^3}{c^3}   \\frac{d \\nu}{exp\\left(\\frac{h \\nu}{k T}\\right) - 1} $$\n",
         "\n",
         "\n",
+        "##**Rayleigh-Jeans law**\n",
+        "\n",
+        "for longer wavelengths or smaller frequencies ($h\\nu \\ll kT$) we have\n",
+        "$$\\frac{h\\nu}{kT} \\ll 1$$\n",
+        "$$e^{h\\nu}{kT} \\approx 1 + \\frac{h\\nu}{kT}$$\n",
+        "\n",
+        "Energy density:\n",
+        "\n",
+        "$$u(\\nu,T) = \\frac{8 \\pi h \\nu^3}{c^3}   \\frac{1}{\\frac{h \\nu}{kT}}\n",
+        "= \\frac{8 \\pi \\nu^2 kT}{c^3} $$\n",
         "\n",
         "\n"
       ],
@@ -94,7 +104,7 @@
         "id": "iroPu2LxOcxR",
         "outputId": "80dc7367-10f1-4b42-a67f-d6b6e71cc50b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
