--- a/Specific_Heat.ipynb
+++ b/Specific_Heat.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/rzAAZbUZM2TtayEWevdR",
+      "authorship_tag": "ABX9TyPdeP6zKLCYS45puvLyneSd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         " - Debye distribution function\n",
         "\n",
         "\n",
-        " *Classical value* of specific heat $C_V = 3 R$ with $R$ is gas constant."
+        " *Classical value* of specific heat $C_V = 3 R$ with $R$ is gas constant. This is also known as **Dulong-Petit Law**"
       ],
       "metadata": {
         "id": "uNayd75q2ruv"
@@ -112,7 +112,7 @@
           "height": 564
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -182,7 +182,7 @@
           "height": 564
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
